# TgInviteBot

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  .rsyncignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: config.py  main.py  status.py
bot/db/: connection.py  events.py  members.py  settings.py
bot/handlers/: admin.py  member_left.py  message.py  new_member.py
bot/i18n/: __init__.py  es.py  hi.py  id.py  pt.py  ru.py  vi.py
bot/middlewares/: rate_limit.py
bot/services/: ai_validator.py  notifier.py  onboarding.py  scheduler.py
bot/utils/: template.py
migrations/: 001_initial.sql  002_admin_message_id.sql  run_migrations.py
scripts/: backup.sh  restore.sh
tests/: conftest.py  test_ai_validator.py  test_command_access.py  test_config.py  test_db.py  test_handlers_message.py  test_hypothesis.py  test_i18n.py  test_middleware.py  test_multi_user_onboarding.py  test_notifier.py  test_onboarding.py  test_onboarding_full.py  test_scheduler.py  test_template.py
