[project]
name = "tginvitebot"
version = "1.0.0"
description = "Telegram bot for AI-powered onboarding of new group members"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4.0",
    "aiosqlite>=0.19,<1.0",
    "apscheduler>=3.10,<4.0",
    "openai>=1.12,<2.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
